--- a/Slutprojekt_wsp/views/layout.erb
+++ b/Slutprojekt_wsp/views/layout.erb
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bilparadiset</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <%= yield %>
-    </div>
+  <header>
+    <nav>
+      <div class="nav-left">
+        <a href="/" class="nav-logo">Bilparadiset</a>
+        <a href="/shop" class="nav-link">Butik</a>
+      </div>
+      <div class="nav-right">
+        <% if logged_in? %>
+          <a href="/cart" class="nav-button cart-button">
+            Kundvagn
+            <% if total_cart_items > 0 %>
+              <span class="cart-count"><%= total_cart_items %></span>
+            <% end %>
+          </a>
 
-    <footer class="branding" style="text-align:left">
-        <small>&copy; <%= Time.now.year %> <strong>Taskx</strong></small>
-    </footer>
+          <% if admin_user? %>
+            <a href="/admin" class="nav-button">Admin</a>
+          <% end %>
 
-    <% if defined?(current_user) && current_user %>
-      <a href="/logout">Logout</a>
-    <% end %>
+          <a href="/users/<%= current_user['id'] %>" class="nav-button">
+            <%= current_user['username'] %>
+          </a>
+          <form action="/logout" method="post" style="display:inline;">
+            <button class="nav-button" style="background:none; border:none; cursor:pointer;">Logga ut</button>
+          </form>
+        <% else %>
+          <a href="/welcome" class="nav-button">Logga in</a>
+        <% end %>
+      </div>
+    </nav>
+  </header>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <main class="wrapper">
+    <%= yield %>
+  </main>
 </body>
 </html>
