--- a/Slutprojekt_wsp/views/users/show.erb
+++ b/Slutprojekt_wsp/views/users/show.erb
@@ -10,7 +10,7 @@
     </div>
     
     <div class="user-actions">
-      <a href="/cart" class="btn">Visa kundvagn (<%= cart_item_count %>)</a>
+      <a href="/cart" class="btn">Visa kundvagn (<%= total_cart_items %>)</a>
       <form action="/logout" method="post">
         <button type="submit" class="btn">Logga ut</button>
       </form>
