--- a/Slutprojekt_wsp/views/users/show.erb
+++ b/Slutprojekt_wsp/views/users/show.erb
@@ -1,11 +1,11 @@
 <div class="user-profile">
-  <h1>Välkommen, <%= @user['username'] %></h1>
+  <h1>Välkommen, <%= @user.username %></h1>
   
   <div class="user-content">
     <div class="user-info">
       <p>Kontouppgifter:</p>
       <ul>
-        <li>Användarnamn: <%= @user['username'] %></li>
+        <li>Användarnamn: <%= @user.username %></li>
       </ul>
     </div>
     
