--- a/Slutprojekt_wsp/views/admin/edit.erb
+++ b/Slutprojekt_wsp/views/admin/edit.erb
@@ -1,35 +1,35 @@
 <div class="admin-form-container">
   <h1>Redigera Produkt</h1>
   
-  <form action="/admin/products/<%= @product['id'] %>" method="POST">
+  <form action="/admin/products/<%= @product.id %>" method="POST">
     <input type="hidden" name="_method" value="PATCH">
 
     <div class="form-group">
       <label for="name">Namn:</label>
-      <input type="text" id="name" name="name" value="<%= @product['name'] %>" required>
+      <input type="text" id="name" name="name" value="<%= @product.name %>" required>
     </div>
 
     <div class="form-group">
       <label for="description">Beskrivning:</label>
-      <textarea id="description" name="description" rows="4" required><%= @product['description'] %></textarea>
+      <textarea id="description" name="description" rows="4" required><%= @product.description %></textarea>
     </div>
 
     <div class="form-group">
       <label for="price">Pris (kr):</label>
-      <input type="number" id="price" name="price" step="0.01" value="<%= @product['price'] %>" required>
+      <input type="number" id="price" name="price" step="0.01" value="<%= @product.price %>" required>
     </div>
 
     <div class="form-group">
       <label for="stock">Lager:</label>
-      <input type="number" id="stock" name="stock" value="<%= @product['stock'] %>" required>
+      <input type="number" id="stock" name="stock" value="<%= @product.stock %>" required>
     </div>
 
     <div class="form-group">
       <label for="category_id">Kategori:</label>
       <select id="category_id" name="category_id" required>
         <% @categories.each do |cat| %>
-          <option value="<%= cat['id'] %>" <%= "selected" if cat['id'] == @product['category_id'] %>>
-            <%= cat['name'] %>
+          <option value="<%= cat.id %>" <%= "selected" if cat.id == @product.category_id %>>
+            <%= cat.name %>
           </option>
         <% end %>
       </select>
