--- a/Slutprojekt_wsp/views/admin/new.erb
+++ b/Slutprojekt_wsp/views/admin/new.erb
@@ -1,28 +1,35 @@
-<div class="form-group">
+<form action="/admin/products" method="POST">
+  <div class="form-group">
+    <label for="name">Namn:</label>
+    <input type="text" id="name" name="name" required>
+  </div>
+
+  <div class="form-group">
     <label for="description">Beskrivning:</label>
     <textarea id="description" name="description" rows="4" required></textarea>
-</div>
+  </div>
 
-<div class="form-group">
+  <div class="form-group">
     <label for="price">Pris (kr):</label>
     <input type="number" id="price" name="price" step="0.01" required>
-</div>
+  </div>
 
-<div class="form-group">
+  <div class="form-group">
     <label for="stock">Lager:</label>
     <input type="number" id="stock" name="stock" required>
-</div>
+  </div>
 
-<div class="form-group">
+  <div class="form-group">
     <label for="category_id">Kategori:</label>
     <select id="category_id" name="category_id" required>
-        <% @categories.each do |category| %>
-            <option value="<%= category['id'] %>"><%= category['name'] %></option>
-        <% end %>
+      <% @categories.each do |cat| %>
+        <option value="<%= cat.id %>"><%= cat.name %></option>
+      <% end %>
     </select>
-</div>
+  </div>
 
-<div class="form-actions">
+  <div class="form-actions">
     <button type="submit" class="submit-btn">Skapa produkt</button>
     <a href="/admin" class="cancel-btn">Avbryt</a>
-</div>
+  </div>
+</form>
