--- a/Slutprojekt_wsp/views/shop/show.erb
+++ b/Slutprojekt_wsp/views/shop/show.erb
@@ -1,13 +1,13 @@
-<h1><%= @product['name'] %></h1>
-<p><%= @product['description'] %></p>
-<p><strong>Pris: <%= @product['price'] %> kr</strong></p>
-<p>Lagerstatus: <%= @product['stock'] %> st</p>
+<h1><%= @product.name %></h1>
+<p><%= @product.description %></p>
+<p><strong>Pris: <%= @product.price %> kr</strong></p>
+<p>Lagerstatus: <%= @product.stock %> st</p>
 <% if logged_in? %>
-  <form action="/cart/add/<%= @product['id'] %>" method="POST">
+  <form action="/cart/add/<%= @product.id %>" method="POST">
     <label>Antal:</label>
     <input type="number" name="quantity" value="1" min="1">
     <button type="submit">Lägg i kundvagn</button>
   </form>
 <% else %>
-  <p><em>Du måste logga in för att kunna köpa.</em></p>
+  <p>Logga in för att handla</p>
 <% end %>
